Thu Jan 03 12:48:23 2002  George Lebl <jirka@5z.com>

	* panel-applet.[ch]: mvoe gnome_program_init into the macro and
	  remove unused parameters from the main functions.  though applets
	  using the macro should see no difference and I don't think anyone
	  used the main functions directly.

Thu Dec 27 23:30:15 2001  George Lebl <jirka@5z.com>

	* Makefile.am: fix including of marshal header file in the .c file

	* panel-applet-masrhal.list, panel-applet.[ch]: Use actual GClosure
	  inside the code and add closure types of main methods.  This
	  way we also no longer look at out of scope local vars which has
	  a fun effect on shlib applets.

2001-12-20  Mark McLoughlin  <mark@skynet.ie>

	Implement applet preferences handling in gconf. Applets should
	install schemas without any applytos. The schemas will be associated
	with the actual keys when we know where the applet should store its
	preferences.

	* panel-applet-gconf.[ch]: (panel_applet_gconf_get_full_key),
	(panel_applet_gconf_set_bool), (panel_applet_gconf_set_int),
	(panel_applet_gconf_set_string), (panel_applet_gconf_set_float),
	(panel_applet_gconf_set_value), (panel_applet_gconf_get_bool),
	(panel_applet_gconf_get_int), (panel_applet_gconf_get_string),
	(panel_applet_gconf_get_float), (panel_applet_gconf_get_value):
	impl convenience functions.

	* panel-applet.[ch]: (panel_applet_associate_schemas_in_dir),
	(panel_applet_add_preferences): impl associating a directory full
	of schemas with the appropiate keys in the applets preferences
	directory.
	(panel_applet_get_preferences_key), (panel_applet_get_expand_flags),
	(panel_applet_set_expand_flags), (panel_applet_get_size),
	(panel_applet_get_orient): improve error checking.
	(panel_applet_control_bound): cache the prefs dir.

	* Makefile.am: add panel-applet-gconf.[ch].

	* TODO: knock this off the todo list :-)

2001-12-19  Mark McLoughlin  <mark@skynet.ie>

	* TODO: new file.

2001-12-17  Mark McLoughlin  <mark@skynet.ie>
