@@ -1,3 +1,9 @@
+2002-01-04  Mark McLoughlin  <mark@skynet.ie>
+
+	* panel-applet.c: (panel_applet_factory_main_closure),
+	(panel_applet_factory_main), (panel_applet_shlib_factory_closure),
+	(panel_applet_shlib_factory): fix precondition FIXMEs.
+
 Thu Jan 03 12:48:23 2002  George Lebl <jirka@5z.com>
 
 	* panel-applet.[ch]: mvoe gnome_program_init into the macro and
